--- a/ templates/index.html
+++ b/ templates/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Garden</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/fonts.css">
 </head>
 <body>
 <div class="wrapper">
@@ -20,6 +20,7 @@
                 <a href="mailto:info@smartgarden.am ">info@smartgarden.am </a>
                 <a href="mailto:smartgarden@gmail.com ">smartgarden@gmail.com </a>
             </div>
+            
         </div>
     </div>
 </div>
